# chemcloud-client

./: .flake8  .gitignore  .mdl.rb  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  _typos.toml  fake.py  index.html  index.md  michael_example.txt  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  search.html  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic-code-quality.yaml  basic_code_quality.yaml  create-release.yaml  publish-to-pypi.yaml  test.yaml
CHANGELOG/: index.html
about/: index.html
api-documentation/CCClient/: index.html
api-documentation/FutureOutput/: index.html
api-documentation/Main Methods/: index.html
api-documentation/ProgramInputs/: index.html
api-documentation/ProgramOutput/: index.html
api-documentation/exceptions/: index.html
chemcloud/: __init__.py  client.py  config.py  exceptions.py  http_client.py  models.py
code-reference/CCClient/: index.html
code-reference/FutureOutput/: index.html
code-reference/FutureOutputs/: index.html
code-reference/Main Methods/: index.html
code-reference/ProgramInputs/: index.html
code-reference/ProgramOutput/: index.html
code-reference/ProgramOutputs/: index.html
code-reference/exceptions/: index.html
code-reference/future-outputs/: index.html
code-reference/future-results/: index.html
code-reference/inputs/: index.html
code-reference/outputs/: index.html
code_reference/AtomicInput/: index.html
code_reference/AtomicResult/: index.html
code_reference/CCClient/: index.html
code_reference/ComputeError/: index.html
code_reference/FailedOperation/: index.html
code_reference/FutureResult/: index.html
code_reference/Molecule/: index.html
code_reference/OptimizationInput/: index.html
code_reference/OptimizationResult/: index.html
code_reference/QCClient/: index.html
code_reference/TCClient/: index.html
code_reference/exceptions/: index.html
code_reference/models/: index.html
dev-decisions/: index.html
development/core_decisions/: index.html
docs/: CHANGELOG.md  dev-decisions.md  index.md
docs/api-documentation/: CCClient.md  Main Methods.md  ProgramInputs.md  ProgramOutput.md  exceptions.md
docs/code-reference/: FutureOutput.md  Main Methods.md  ProgramInputs.md  ProgramOutput.md  ProgramOutputs.md
docs/code_reference/: AtomicInput.md  AtomicResult.md  CCClient.md  ComputeError.md  FailedOperation.md  FutureResult.md  Molecule.md  OptimizationInput.md  OptimizationResult.md  QCClient.md  TCClient.md  exceptions.md  models.md
docs/development/: core_decisions.md
docs/tutorial/: authentication.md  batch-computations.md  batch_computations.md  bigchem-algorithms.md  bigchem_algorithms.md  bigqc_algorithms.md  compute.md  compute_engines.md  geometry-optimization.md  geometry_optimization.md  supported-programs.md  terachem_cloud_algorithms.md
docs/usage/: TCClient.md  authentication.md  compute.md  keywords.md  molecule.md
examples/: basic.py  energy.py  energy_async.py  energy_batch.py  energy_wfn_input.py  geometry_optimization.py  h2o.xyz  optimization.py  optimization_batch.py  parallel_frequency_analysis.py  parallel_hessian.py  xtb.py
qccloud/: __init__.py  client.py  config.py  http_client.py  models.py
scripts/: format.sh  release.py  tests.sh
search/: search_index.json
tccloud/: __init__.py  client.py  config.py  exceptions.py  http_client.py  models.py  utils.py
tests/: conftest.py  jwt.txt  test_client.py  test_http_client.py  test_main_funcs.py  test_models.py  test_utils.py  water.b3lyp.6-31g.energy.json  water.json
tutorial/authentication/: index.html
tutorial/batch-computations/: index.html
tutorial/batch_computations/: index.html
tutorial/bigchem-algorithms/: index.html
tutorial/bigchem_algorithms/: index.html
tutorial/bigqc_algorithms/: index.html
tutorial/compute/: index.html
tutorial/compute_engines/: index.html
tutorial/geometry-optimization/: index.html
tutorial/geometry_optimization/: index.html
tutorial/keywords/: index.html
tutorial/supported-programs/: index.html
tutorial/terachem_cloud_algorithms/: index.html
usage/Atomic Input/: index.html
usage/TCClient/: index.html
usage/authentication/: index.html
usage/compute/: index.html
usage/keywords/: index.html
usage/molecule/: index.html
