[tool.poetry]
name = "chemcloud"
version = "0.11.1"
description = "Fast, secure, scalable quantum chemistry. A Python client for the the ChemCloud server."
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mtzgroup/chemcloud-client"
documentation = "https://mtzgroup.github.io/chemcloud-client/"
homepage = "https://mtzgroup.github.io/chemcloud-client/"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
tomli = { version = ">=1.1.0", python = "<3.11" }
tomli-w = "^1.0.0"
httpx = "^0.23.1"
qcio = "^0.11.0"
pydantic = ">=2.0.0, !=2.4.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.12.0"
ruff = "^0.0.287"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
pytest-httpx = "<0.23.0"
pytest-mock = "^3.11.1"
types-toml = "^0.10.8.20240310"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.3.2"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }
markdown-include = "^0.8.1"
pymdown-extensions = "^10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 88
isort = { known-first-party = ["qcio", "tests"] }
target-version = "py38"

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
exclude = ["examples"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
