[project]
name = "chemcloud"
version = "0.17.0"
description = "Fast, secure, scalable quantum chemistry. A Python client for the the ChemCloud server."
authors = [
    { name = "Colton Hicks", email = "github@coltonhicks.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0.0,!=2.4.0",
    "pydantic-settings>=2.0.3,<3",
    "qcdata>=0.18.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0.0,<2",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://mtzgroup.github.io/chemcloud-client/"
Documentation = "https://mtzgroup.github.io/chemcloud-client/"
Repository = "https://github.com/mtzgroup/chemcloud-client"

[dependency-groups]
dev = [
    "coverage>=7.3.0,<8",
    "mypy>=1.5.1,<2",
    "pre-commit>=3.4.0,<4",
    "pytest-asyncio>=0.25.3,<0.26",
    "pytest-cov>=4.1.0,<5",
    "pytest-httpx>=0.23.0",
    "pytest-mock>=3.11.1,<4",
    "ruff>=0.5.0,<0.6",
    "types-toml>=0.10.8.20240310",
]
docs = [
    "markdown-include>=0.8.1,<0.9",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.3.2,<10",
    "mkdocstrings[python]>=0.28.0,<0.29",
    "pymdown-extensions>=10.3,<11",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "chemcloud",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = [
    "tests",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*__init__.py",
]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
exclude = [
    "examples",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
